fix(sidenav): Sets right percentage to negative on small screens

--- a/css/ghpages-materialize.css
+++ b/css/ghpages-materialize.css
@@ -6729,7 +6729,7 @@ ul.side-nav.fixed {
   ul.side-nav.fixed {
     left: -105%; }
     ul.side-nav.fixed.right-aligned {
-      right: 105%;
+      right: -105%;
       left: auto; }
  }
 
